@@ -12,7 +12,7 @@ class MalformedDeltaCompressedHitBuffer(Exception): pass
 
 class DeltaHit:
     def __init__(self, hitbuf):
-        self.words   = unpack('<2I', hitbuf[0:8])
+        self.words = unpack('<2I', hitbuf[0:8])
         iscompressed = (self.words[0] & 0x80000000L) >> 31 # Use L constant to suppress maxint warning
         if not iscompressed:
             raise MalformedDeltaCompressedHitBuffer("no compression bit found")
@@ -25,32 +25,32 @@ class DeltaHit:
         self.fadc_avail = ((self.words[0] & 0x8000) != 0)
         self.lcdown     = (( self.words[0] >> 16) & 0x1 == 1)
         self.lcup       = (( self.words[0] >> 17) & 0x1 == 1)
-        if self.trigger & 0x01: self.is_spe    = True
-        else:                   self.is_spe    = False
-        if self.trigger & 0x02: self.is_mpe    = True
-        else:                   self.is_mpe    = False
-        if self.trigger & 0x04: self.is_beacon = True
-        else:                   self.is_beacon = False
+        self.is_spe = self.trigger & 0x01
+        self.is_mpe = self.trigger & 0x02
+        self.is_beacon = self.trigger & 0x04
+        self.hitbytes = hitbuf[16:]
 
     def __repr__(self):
         lcup = self.lcup and "LCUP" or ""
         lcdn = self.lcdown and "LCDN" or ""
-        return """
-W0 0x%08x W1 0x%08x %s %s
-Hit size = %4d     ATWD avail   = %4d     FADC avail = %4d
-A/B      = %4d     ATWD#        = %4d     Trigger word = 0x%04x
-"""                         % (self.words[0], self.words[1], lcup, lcdn, self.hitsize,
-                               self.atwd_avail, self.fadc_avail,
-                               self.atwd_chip, self.natwdch, self.trigger)
+        return ("W0 0x%08x W1 0x%08x %s %s  Hit-size=%4d  "
+               "ATWD-avail=%s  FADC-avail=%s  A/B=%d  "
+               "#ATWD=%d  trigword=0x%04x  rest=%d %s" %
+                (self.words[0], self.words[1], lcup, lcdn, self.hitsize,
+                 self.atwd_avail and "Y" or "n",
+                 self.fadc_avail and "Y" or "n", self.atwd_chip,
+                 self.natwdch, self.trigger, len(self.hitbytes), [ord(b) for b in self.hitbytes]))
+
 
 class DeltaHitBuf:
     def __init__(self, hitdata):
-        if len(hitdata) < 8: raise MalformedDeltaCompressedHitBuffer()
+        if len(hitdata) < 8:
+            raise MalformedDeltaCompressedHitBuffer()
         junk, nb   = unpack('>HH', hitdata[0:4])
         junk, tmsb = unpack('>HH', hitdata[4:8])
         nb -= 8
-        # print "len %d tmsb %d" % (nb, tmsb)
-        if nb <= 0: raise MalformedDeltaCompressedHitBuffer()
+        if nb <= 0:
+            raise MalformedDeltaCompressedHitBuffer()
         self.payload = hitdata[8:]
         
     def next(self):
@@ -60,18 +60,3 @@ class DeltaHitBuf:
             hitsize = words[0] & 0x7FF
             yield DeltaHit(rest[0:hitsize])
             rest = rest[hitsize:]
-
-
-class TestMyStuff(unittest.TestCase):
-    def test1(self): self.assertEqual(2+2, 4)
-
-def doTests():
-    suite = unittest.TestLoader().loadTestsFromTestCase(TestMyStuff)
-    unittest.TextTestRunner(verbosity=2).run(suite)
-
-def main():
-    doTests()
-    # Rest of main program goes here - nothing defined yet
-
-if __name__ == "__main__": main()
-
